# flight-price-alert

./: .env.example  .gitignore  README.md  pyproject.toml  tatus
.github/workflows/: ci.yml  flight-price-monitor.yml
config/: flexible_routes.json  routes.json
src/flight_alert/: app.py  flexible_app.py  flexible_main.py  main.py
src/flight_alert/config/: __init__.py  flexible_loader.py  loader.py
src/flight_alert/database/: __init__.py  sqlite_repository.py
src/flight_alert/domain/models/: route.py
src/flight_alert/insights/: __init__.py  base.py  gemini.py
src/flight_alert/models/: __init__.py  alert_decision.py  flexible_date_option.py  flexible_deal_result.py  flexible_month_search.py  price_analysis.py  price_history_analysis.py  price_result.py  route.py
src/flight_alert/notifications/: __init__.py  base.py  discord.py
src/flight_alert/providers/: __init__.py  base.py  flexible_base.py  serpapi.py  serpapi_deals.py  serpapi_flexible_grid.py  simulated.py
src/flight_alert/services/: __init__.py  alert_policy.py  flexible_adapter.py  history_analyzer.py  monitoring_engine.py  price_analyzer.py
tests/: test_alert_policy.py  test_config_loader.py  test_discord_notifier.py  test_flexible_adapter.py  test_flexible_date_grid.py  test_gemini_insight.py  test_history_analyzer.py  test_monitor_cursor.py  test_price_analyzer.py  test_price_result.py  test_route.py  test_serpapi_provider.py  test_simulated_provider.py  test_sqlite_repository.py
