[project]
name = "flight-price-alert"
version = "0.1.0"
description = "Flight price monitoring bot with Discord and WhatsApp notifications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
