[project]
name = "flight-price-alert"
version = "0.1.0"
description = "Flight price monitoring bot with Discord and WhatsApp notifications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.12.1",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
flight-alert = "flight_alert.main:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.uv.build-backend]
module-name = "flight_alert"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
